--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,9 @@ set -g prefix `
 bind-key ` send-prefix
 
 # Vim-like splitting
-bind v split-window -h
-bind s split-window -v
+bind v split-window -h -c '#{pane_current_path}'
+bind s split-window -v -c '#{pane_current_path}'
+
 unbind '"'
 unbind %
 
