--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,19 +1,21 @@
 # set default prefix to C-a
 unbind C-b
-set -g prefix `
-bind-key ` send-prefix
+set -g prefix C-a
+bind-key C-a send-prefix
 
 # Vim-like splitting
 bind v split-window -h -c '#{pane_current_path}'
 bind s split-window -v -c '#{pane_current_path}'
-
 unbind '"'
 unbind %
 
 # Copy / Selection mode like VIM
 setw -g mode-keys vi
+bind p paste-buffer
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # Pane navigation compatible with VIM
 # See: https://github.com/christoomey/vim-tmux-navigator
